# SynFER

./: .gitignore  README.md  STYLE.md  pyproject.toml
.agents/rules/: synfer.md
HPSv2/: evaluation.py  img_score.py
OpenGraphAU/: README.md  conf.py  dataset.py  main.py  utils.py
OpenGraphAU/model/: ANFL.py  MEFL.py  __init__.py  basic_block.py  graph_edge_model.py  resnet.py  swin_transformer.py
POSTER_V2/: main.py
POSTER_V2/models/: PosterV2.py  ir50.py  mobilefacenet.py  sam.py  vit_model.py
backend/: config.py  main.py  utils.py
backend/api/: generate.py  health.py
docs/: FaceSynthesis.md  FinalProject.md  PLAN.md  presentation_scripts.md  tasks.md
frontend/: README.md  metadata.json  next.config.ts  package-lock.json
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/api/generate/: route.ts
frontend/components/: Footer.tsx  Header.tsx  ReferenceUploadCard.tsx  SynthesisActionsPanel.tsx  SynthesisCanvas.tsx  SynthesisController.tsx  ToastAlert.tsx
frontend/hooks/: use-mobile.ts
frontend/lib/: constants.ts
report/: hcmus-report-template.sty  main.tex
report/content/: analysis_and_comparison.tex  book_analysis.tex  code_analysis.tex  conclusion.tex  demo.tex  eval.tex  experiment.tex  face_expression_synthesis.tex  face_modeling.tex  face_relighting.tex  glossary.tex  synfer.tex  title.tex  work_assignment.tex
report/ref/: ref.bib  ref.tex
scripts/: cal_fer_acc.sh  download_dataset.py  download_dataset.sh  evaluate_synfer.sh  evaluate_synfer_kdef.sh  extract_fau.sh  train_au_adapter.sh  train_lora.sh  upload_dataset.sh
slide/: README.md  main.tex
slide/content/: analysis_and_eval.tex  chapter1.tex  chapter2.tex  chapter3.tex  chapter4.tex  demo.tex  face_expression_synthesis.tex  face_modeling.tex  face_relighting.tex  slides.tex  synfer.tex
slide/ref/: ref.bib  ref.tex
slide/theme/: beamercolorthemeSimpleDarkBlue.sty  beamerfontthemeSimpleDarkBlue.sty  beamerinnerthemeSimpleDarkBlue.sty  beamerthemeSimpleDarkBlue.sty
src/: au_adapter.py  au_dataset.py  evaluate_synfer.py  extract_fau.py  extract_fau_utils.py  train_au_adapter.py  train_lora.py  train_lora_args.py  train_lora_utils.py  utils.py
src/dataset/: __init__.py  affectnet.py  celeba_hq.py  fetext.py  ffhq.py  raf_db.py  sfew.py
src/ip_adapter/: __init__.py  attention_processor.py  attention_processor_faceid.py  custom_pipelines.py  ip_adapter.py  ip_adapter_faceid.py  ip_adapter_faceid_separate.py  resampler.py  sd3_attention_processor.py  test_resampler.py  utils.py
