[project]
name = "synfer"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "datasets>=4.8.5",
    "diffusers>=0.37.1",
    "einops>=0.8.2",
    "huggingface-hub>=1.15.0",
    "kaggle>=2.2.0",
    "numpy>=2.4.6",
    "pillow>=12.2.0",
    "safetensors>=0.7.0",
    "torch>=2.7.1",
    "torchvision>=0.22.1",
    "tqdm>=4.67.3",
    "transformers>=5.9.0",
    "wrapt>=2.1.2",
]


[dependency-groups]
dev = [
    "ruff>=0.15.4",
]

[tool.ruff]
line-length = 120
target-version = "py312"
exclude = ["**/submission_*.py", "*.ipynb"]

[tool.ruff.lint]
# E: pycodestyle, F: pyflakes, I: isort, UP: pyupgrade
select = ["E", "F", "I", "UP"] 
ignore = []

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[[tool.uv.index]]
name = "pytorch-cu118"
url = "https://download.pytorch.org/whl/cu118"
explicit = true

[tool.uv.sources]
torch = { index = "pytorch-cu118" }
torchvision = { index = "pytorch-cu118" }
