[project]
name = "synfer"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "accelerate>=1.13.0",
    "bitsandbytes>=0.49.2",
    "clean-fid>=0.1.35",
    "datasets>=4.8.5",
    "diffusers>=0.37.1",
    "easydict>=1.13",
    "einops>=0.8.2",
    "fastapi>=0.138.0",
    "huggingface-hub>=1.15.0",
    "kaggle>=2.2.0",
    "matplotlib>=3.6.0",
    "numpy>=2.4.6",
    "opencv-python-headless>=4.13.0.92",
    "peft>=0.19.1",
    "pillow>=12.2.0",
    "python-multipart>=0.0.32",
    "pyyaml>=6.0.3",
    "safetensors>=0.7.0",
    "scikit-learn>=1.9.0",
    "thop>=0.1.1",
    "timm>=1.0.27",
    "torch>=2.7.1",
    "torchsampler>=0.1.2",
    "torchvision>=0.22.1",
    "tqdm>=4.67.3",
    "transformers>=5.9.0",
    "uvicorn>=0.49.0",
    "wandb>=0.27.0",
    "wrapt>=2.1.2",
]


[dependency-groups]
dev = [
    "ruff>=0.15.4",
]

[tool.ruff]
line-length = 120
target-version = "py312"
exclude = ["**/submission_*.py", "*.ipynb"]

[tool.ruff.lint]
# E: pycodestyle, F: pyflakes, I: isort, UP: pyupgrade
select = ["E", "F", "I", "UP"] 
ignore = []

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[[tool.uv.index]]
name = "pytorch-cu118"
url = "https://download.pytorch.org/whl/cu118"
explicit = true

[tool.uv.sources]
torch = { index = "pytorch-cu118" }
torchvision = { index = "pytorch-cu118" }
